--- a/app/src/main/res/layout-land/activity_data_pegawai.xml
+++ b/app/src/main/res/layout-land/activity_data_pegawai.xml
@@ -9,7 +9,7 @@
     tools:context=".Data_Pegawai">
     
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_data_pelanggan"
+            android:id="@+id/rv_data_pegawai"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/card_data_pegawai">
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/bt_data_pengguna_tambah"
+                android:id="@+id/bt_data_pegawai_tambah"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/pluss"
@@ -27,6 +27,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="16dp"
+                android:contentDescription="+"
                 android:layout_marginBottom="16dp"/>
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
