--- a/app/src/main/res/layout/activity_data_pegawai.xml
+++ b/app/src/main/res/layout/activity_data_pegawai.xml
@@ -27,6 +27,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentBottom="true"
                 android:layout_marginEnd="16dp"
+                android:contentDescription="+"
                 android:layout_marginBottom="16dp"/>
         </RelativeLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
