--- a/app/src/main/res/layout/activity_tambah_pelanggan.xml
+++ b/app/src/main/res/layout/activity_tambah_pelanggan.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bglaundryyrill"
-    tools:context=".pelanggan.TambahPelanggan">
+    tools:context="TambahPelanggan">
 
     <TextView
         android:layout_width="wrap_content"
@@ -74,37 +74,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="10dp"
         />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvTerdaftar_pelanggan"
-        android:text="@string/card_tambah_pelanggan_terdaftar"
-        app:layout_constraintTop_toBottomOf="@+id/etNoHp_pelanggan"
-        android:textSize="18sp"
-        android:layout_marginStart="30dp"
-        android:fontFamily="@font/poppinsmedium"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="parent"/>
-    <EditText
-        android:id="@+id/etTerdaftar_pelanggan"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/card_tambah_pelanggan_terdaftar"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTerdaftar_pelanggan"
-        android:padding="10dp"
-        android:fontFamily="@font/poppinsmediumitalic"
-        android:background="@drawable/edit_text_border"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginBottom="10dp"
-        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamat_pelanggan"
         android:text="@string/card_tambah_pelanggan_alamat"
-        app:layout_constraintTop_toBottomOf="@+id/etTerdaftar_pelanggan"
+        app:layout_constraintTop_toBottomOf="@+id/etNoHp_pelanggan"
         android:textSize="18sp"
         android:layout_marginStart="30dp"
         android:fontFamily="@font/poppinsmedium"
@@ -133,7 +109,7 @@
         android:backgroundTint="#133E87"
         android:padding="12dp"
         android:fontFamily="@font/poppinssemibold"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="60dp"
         app:layout_constraintTop_toBottomOf="@id/etAlamat_pelanggan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
